# minetest-rust

./: .gitignore  Cargo.toml  README.md  build.rs  makefile  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
api/: __internal.lua  __internal.luau  __internal_server.lua  api.lua  api.luau  minetest.lua  minetest.luau  testing.lua  testing.luau  vector.lua
api/client/: __internal_client.lua
api/server/: __internal_server.lua
api/testing/: mangle_test.lua
games/minetest/: game.conf
games/minetest/mods/main/: main.lua
games/testing/mods/main/: main.lua
old_prototyping/: mouse_control_clear_color.txt  trollface_rave
prototype_models/: attributes.toml  bendy_plane.gltf  minetest_sam.gltf  snowman.gltf
shaders/: default_shader.wgsl
src/: client.rs  command_line.rs  file_utilities.rs  game.rs  main.rs  server.rs
src/game/: client.rs  delta_reporter.rs  delta_time.rs  game.rs  logic.rs  lua_engine.rs  mod.rs  scripting.rs  serial.rs  server.rs  typescript_engine.rs
src/game/client/: client_connection.rs  keyboard.rs  mouse.rs  render_engine.rs  virtual_reality_engine.rs  window_handler.rs
src/game/client/render_engine/: batched_render_call.rs  camera.rs  color_uniform.rs  depth_buffer.rs  instance_render_call.rs  instance_trigger.rs  instanced_render_matrix.rs  mesh.rs  mesh_trs_uniform.rs  model.rs  model_loader.rs  render_call.rs  render_containers.rs  texture.rs  trs_projection_data.rs
src/game/client/render_engine/camera/: camera_uniform.rs
src/game/client/render_engine/model_loader/: gltf_loader.rs  obj_loader.rs
src/game/client/window_handler/: key_event_enum.rs
src/game/lua_engine/: file_helpers.rs  lua_file_helpers.rs
src/game/server/: connection.rs  server_connection.rs
