[package]
name = "minetest-rust"
version = "0.0.1"
edition = "2021"
authors = ["jordan4ibanez", "for the moment"]

# Always use the latest stable rust version in this project.
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
dead_code = "allow"
unused_variables = "allow"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
configparser = "3.0.3"
message-io = "0.18.0"
mlua = { version = "0.9.2", features = ["luau-jit"] }
spin_sleep = "1.1.1"
