[package]
name = "minetest-rust"
version = "0.0.1"
edition = "2021"
authors = ["jordan4ibanez", "for the moment"]

# Always use the latest stable rust version in this project.
# You can update your rust version with: rustup update stable
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
# DO NOT allow unsafe code.
unsafe_code = "forbid"

# These can be turned on and off for active development.
dead_code = "allow"
unused_variables = "allow"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
configparser = "3.0.3"
message-io = "0.18.0"
mlua = { version = "0.9.2", features = ["luau-jit"] }
rusqlite = "0.30.0"
sea-query = { version = "0.30.5", features = [
  "backend-sqlite",
  "with-time",
  "with-json",
  "with-uuid",
] }
spin_sleep = "1.1.1"
