[package]
name = "minetest-rust"
version = "0.0.1"
edition = "2021"
authors = ["jordan4ibanez", "for the moment"]

# Always use the latest stable rust version in this project.
# You can update your rust version with: rustup update stable
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
# DO NOT allow unsafe code.
unsafe_code = "forbid"

# These can be turned on and off for active development.
dead_code = "allow"
unused_variables = "allow"
# unwrap_used = "forbid"

[dependencies]
ahash = "*"
bytemuck = { version = "*", features = ["derive"] }
clap = { version = "*", features = ["derive"] }
configparser = "*"
ctrlc = { version = "*", features = ["termination"] }
env_logger = "*"
glam = { version = "*", features = ["approx", "bytemuck", "rand", "serde"] }
gltf = "*"
image = { version = "*", default-features = false, features = [
  "png",
  "jpeg",
  "webp",
] }
log = "*"
message-io = "*"
mlua = { version = "*", features = ["luau-jit"] }
pollster = "*"
quote = "*"
rand = "*"
rusqlite = "*"
sdl2 = { version = "*", features = [
  "raw-window-handle",
  "bundled",
  "static-link",
] }
sea-query = { version = "*", features = [
  "backend-sqlite",
  "with-time",
  "with-json",
  "with-uuid",
] }
serde = { version = "*", features = ["derive"] }
serde_bytes = "*"
spin_sleep = "*"
spin_sleep_util = "*"
syn = "*"
tobj = "*"
unique_64 = "*"
wgpu = "*"
wgpu_sdl_linker = "*"
